Subo cambios hechos a la fecha 02/06/2024

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: url("/proyecto_moodle/src/assets/fondo.png");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 h1 {
